@@ -46,6 +46,10 @@ Other Changes
 
   Closes #5931
 
+* Removed the broken ``generate-man`` option.
+
+  Closes #5283
+
 * The concept of checker priority has been removed.
 
 * The ``set_config_directly`` decorator has been removed.
