@@ -14,6 +14,10 @@ Release date: TBA
 
   Closes #6074
 
+* Removed the broken ``generate-man`` option.
+
+  Closes #5283
+
 * Add new check ``unnecessary-dunder-call`` for unnecessary dunder method calls.
 
   Closes #5936
